--- a/app/den/manage-common-rooms/manage-common-rooms.html
+++ b/app/den/manage-common-rooms/manage-common-rooms.html
@@ -1,16 +1,16 @@
 <div class="center hero-unit" ng-controller="ManageCommonRoomsCtrl">
-    <li ng-hide="commonRooms.length">No common rooms</li>
+<!--    <li ng-hide="commonRooms.length">No common rooms</li>
     <div class="tabbable">
         <ul class="nav nav-tabs">
             <li class="active">
-                <a id="moderatedTab" ng-click="showModeratedCommonRooms()" data-toggle="tab">Moderated</a>
+                <a id="moderatedTab" href="#tab1" ng-click="showModeratedCommonRooms()" data-toggle="tab">Moderated</a>
             </li>
             <li>
-                <a id="participatingTab" ng-click="showParticipatedCommonRooms()" data-toggle="tab">Participating</a>
+                <a id="participatingTab" href="#tab2" ng-click="showParticipatedCommonRooms()" data-toggle="tab">Participating</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane active" ng-class="{ active: isModerator }" id="tab1">
+            <div class="tab-pane" ng-class="{ active: isModerator }" id="tab1">
                 <div ng-repeat="commonRoom in commonRooms">
                     <button id="createNewBtn" ng-hide="commonRoom.CommonRoomKey" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">Create New Common Room</button>
                     <button id="updateBtn" ng-show="commonRoom.CommonRoomKey && commonRoom.IsModerator" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">{{ commonRoom.Name }}</button>
@@ -24,5 +24,20 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
+    <tabset>
+        <tab heading="Moderated" active="isModerator">
+            <div ng-repeat="commonRoom in commonRooms">
+                <button id="createNewBtn" ng-hide="commonRoom.CommonRoomKey" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">Create New Common Room</button>
+                <button id="updateBtn" ng-show="commonRoom.CommonRoomKey && commonRoom.IsModerator" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">{{ commonRoom.Name }}</button>
+            </div>
+        </tab>
+        <tab heading="Participating" active="!isModerator">
+            <div ng-repeat="commonRoom in commonRooms">
+                <div ng-show="commonRoom.CommonRoomKey && !commonRoom.IsModerator">
+                    <span>{{ commonRoom.Name }}</span>
+                </div>
+            </div>
+        </tab>
+    </tabset>
 </div>
