--- a/app/den/manage-common-rooms/manage-common-rooms.html
+++ b/app/den/manage-common-rooms/manage-common-rooms.html
@@ -1,40 +1,14 @@
 <div class="center hero-unit" ng-controller="ManageCommonRoomsCtrl">
-<!--    <li ng-hide="commonRooms.length">No common rooms</li>
-    <div class="tabbable">
-        <ul class="nav nav-tabs">
-            <li class="active">
-                <a id="moderatedTab" href="#tab1" ng-click="showModeratedCommonRooms()" data-toggle="tab">Moderated</a>
-            </li>
-            <li>
-                <a id="participatingTab" href="#tab2" ng-click="showParticipatedCommonRooms()" data-toggle="tab">Participating</a>
-            </li>
-        </ul>
-        <div class="tab-content">
-            <div class="tab-pane" ng-class="{ active: isModerator }" id="tab1">
-                <div ng-repeat="commonRoom in commonRooms">
-                    <button id="createNewBtn" ng-hide="commonRoom.CommonRoomKey" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">Create New Common Room</button>
-                    <button id="updateBtn" ng-show="commonRoom.CommonRoomKey && commonRoom.IsModerator" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">{{ commonRoom.Name }}</button>
-                </div>
-            </div>
-            <div class="tab-pane" ng-class="{ active: !isModerator }" id="tab2">
-                <div ng-repeat="commonRoom in commonRooms">
-                    <div ng-show="commonRoom.CommonRoomKey && !commonRoom.IsModerator">
-                        <span>{{ commonRoom.Name }}</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>-->
     <tabset>
-        <tab heading="Moderated" active="isModerator">
+        <tab heading="Moderated" >
             <div ng-repeat="commonRoom in commonRooms">
                 <button id="createNewBtn" ng-hide="commonRoom.CommonRoomKey" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">Create New Common Room</button>
-                <button id="updateBtn" ng-show="commonRoom.CommonRoomKey && commonRoom.IsModerator" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">{{ commonRoom.Name }}</button>
+                <button id="updateBtn" ng-show="commonRoom.CommonRoomKey && commonRoom.isModerator" data-toggle="modal" ng-click="editCommonRoom(commonRoom)" class="btn">{{ commonRoom.Name }}</button>
             </div>
         </tab>
-        <tab heading="Participating" active="!isModerator">
+        <tab heading="Participating" active="isModerator">
             <div ng-repeat="commonRoom in commonRooms">
-                <div ng-show="commonRoom.CommonRoomKey && !commonRoom.IsModerator">
+                <div ng-show="commonRoom.CommonRoomKey && !commonRoom.isModerator">
                     <span>{{ commonRoom.Name }}</span>
                 </div>
             </div>
