--- a/app/den/den.html
+++ b/app/den/den.html
@@ -1,7 +1,36 @@
-<div class="center hero-unit" ng-controller="DenCtrl">
-    <a href="/#/den/manage-common-rooms" class="btn">Manage Common Rooms</a>
-    <li ng-hide="commonRooms.length">No common rooms</li>
-    <div ng-repeat="commonRoom in commonRooms">
-        <a id="commonRoomLink" ng-href="#/common-room/{{ commonRoom.CommonRoomKey }}" class="btn-link"><img ng-src="{{ commonRoom.Banner }}" /></a>
+<div class="center hero-unit scribden den" ng-controller="DenCtrl">
+    <div class="header">
+        <div class="left">
+            <h2>{{ username }}'s Den</h2>
+        </div>
+        <div class="header-link right">
+            <a href="#/den">Profile</a> | <a href="#/logout">Logout</a>
+        </div>
+        <div class="clear"></div>
+    </div>
+    <div class="body">
+        <div class="left align-right">
+            <a href="#/den/messages">Messages</a>
+            <br>
+            <a href="#/den">Common Rooms</a>
+            <br>
+            <a href="#/den/fellows">Fellow Scribs</a>
+            <br>
+            <a href="#/den/bookmarks">Bookmarks</a>
+            <br>
+            <a href="#/den/settings">Settings</a>
+        </div>
+        <div class="right align-right">
+            <ul class="nav nav-pills">
+                <li class="active"><a href="#/den">My Den</a></li>
+                <li><a href="#/den/manage-common-rooms">Manage Common Rooms</a></li>
+            </ul>
+            <br>
+            <li ng-hide="commonRooms.length">No common rooms</li>
+            <div ng-repeat="commonRoom in commonRooms">
+                <a id="commonRoomLink" ng-href="#/common-room/{{ commonRoom.CommonRoomKey }}" class="btn-link"><img ng-src="{{ commonRoom.Banner }}" class="image" /></a>
+            </div>
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
