More minor UI changes

--- a/app/den/den.html
+++ b/app/den/den.html
@@ -10,15 +10,13 @@
     </div>
     <div class="body">
         <div class="left align-right">
-            <a href="#/den/messages">Messages</a>
-            <br>
-            <a href="#/den">Common Rooms</a>
-            <br>
-            <a href="#/den/fellows">Fellow Scribs</a>
-            <br>
-            <a href="#/den/bookmarks">Bookmarks</a>
-            <br>
-            <a href="#/den/settings">Settings</a>
+            <ul class="nav nav-pills nav-stacked">
+                <li><a href="#/den/messages">Messages</a></li>
+                <li class="active"><a href="#/den">Common Rooms</a></li>
+                <li><a href="#/den/fellows">Fellow Scribs</a></li>
+                <li><a href="#/den/bookmarks">Bookmarks</a></li>
+                <li><a href="#/den/settings">Settings</a></li>
+            </ul>
         </div>
         <div class="right align-right">
             <ul class="nav nav-pills">
