--- a/app/den/den.html
+++ b/app/den/den.html
@@ -28,7 +28,8 @@
                     <div ng-hide="commonRooms.length">No common rooms</div>
                     <div ng-repeat="commonRoom in commonRooms">
                         <a id="commonRoomLink" ng-href="#/common-room/{{ commonRoom.CommonRoomKey }}" class="btn-link">
-                            <img ng-src="{{ commonRoom.Banner }}" class="image" ng-show="commonRoom.Banner.length" />
+                            <img ng-src="{{ commonRoom.Banner }}" class="image" ng-show="commonRoom.Banner" />
+                            <div class="default-common-room-bg image" ng-hide="commonRoom.Banner"><div class="banner-text"><strong>{{ commonRoom.Name }}</strong></div></div>
                         </a>
                     </div>
                 </div>
@@ -40,7 +41,7 @@
         <div class="left">
             <h3>ScribDen</h3>
         </div>
-        <div class="right">
+        <div class="footer-links right">
             <ul>
                 <li>© ScribDen, Inc.</li>
                 <li><a href="#/help">Help</a></li>
