More UI work. First pass on post

--- a/app/common-room/common-room.html
+++ b/app/common-room/common-room.html
@@ -1,4 +1,4 @@
-<div class="center hero-unit" ng-controller="CommonRoomHomeViewCtrl">
+<div class="center hero-unit" ng-controller="CommonRoomCtrl">
     <img id="background" ng-src="{{ commonRoom.HomeBG }}" />
     <br/>
     <a href="#/common-room/{{ commonRoom.CommonRoomKey }}/conversation" id="conversations" class="btn">Conversations</a>
