--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,12 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-view></div>
 
+    <script src="components/tinymce/js/tinymce/tinymce.min.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="components/angular-ui-tinymce/src/tinymce.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-2.0.0.min.js"></script>
     <script src="lib/ur-file/src/ur-file.js"></script>
     <script src="lib/q/q.js"></script>
@@ -46,6 +48,7 @@
     <script src="scripts/resources/common-room.js"></script>
     <script src="scripts/resources/image-handler.js"></script>
     <script src="scripts/resources/conversation.js"></script>
+    <script src="scripts/resources/post.js"></script>
     <script src="login/login.js"></script>
     <script src="den/den.js"></script>
     <script src="den/manage-common-rooms/manage-common-rooms.js"></script>
