2nd pass on den ui

--- a/app_retro/index.html
+++ b/app_retro/index.html
@@ -34,8 +34,8 @@
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="components/angular-ui-tinymce/src/tinymce.js"></script>
     <script src="components/tinymce-release/tinymce.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-2.0.0.min.js"></script>
     <script src="index.js"></script>
+    <script src="lib/jquery-2.0.3.min.map.js"></script>
     <script src="lib/q/q.js"></script>
     <script src="lib/underscore-min.js"></script>
     <script src="lib/ur-file/src/ur-file.js"></script>
