Added conversation screen

--- a/app_retro/index.html
+++ b/app_retro/index.html
@@ -25,20 +25,20 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-view></div>
 
+    <script src="lib/jquery-2.0.3.min.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-cookies.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/angular/angular-sanitize.js"></script>
     <script src="lib/angular/angular-route.js"></script>
+    <script src="lib/q/q.js"></script>
+    <script src="lib/underscore-min.js"></script>
+    <script src="lib/ur-file/src/ur-file.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="components/angular-ui-tinymce/src/tinymce.js"></script>
     <script src="components/tinymce-release/tinymce.min.js"></script>
     <script src="index.js"></script>
-    <script src="lib/jquery-2.0.3.min.map.js"></script>
-    <script src="lib/q/q.js"></script>
-    <script src="lib/underscore-min.js"></script>
-    <script src="lib/ur-file/src/ur-file.js"></script>
     <script src="scripts/common/interceptor/AuthenticationInterceptor.js"></script>
     <script src="scripts/resources/authorization.js"></script>
     <script src="scripts/resources/common-room.js"></script>
