Moving controllers to scripts folder

--- a/app_retro/index.html
+++ b/app_retro/index.html
@@ -49,12 +49,12 @@
     <script src="scripts/resources/user.js"></script>
     <script src="scripts/util/md5.min.js"></script>
     <script src="scripts/util/s3upload.js"></script>
-    <script src="controllers/common-room.js"></script>
-    <script src="controllers/conversation.js"></script>
-    <script src="controllers/den.js"></script>
-    <script src="controllers/header.js"></script>
-    <script src="controllers/login.js"></script>
-    <script src="controllers/manage-common-rooms.js"></script>
+    <script src="scripts/controllers/common-room.js"></script>
+    <script src="scripts/controllers/conversation.js"></script>
+    <script src="scripts/controllers/den.js"></script>
+    <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/controllers/login.js"></script>
+    <script src="scripts/controllers/manage-common-rooms.js"></script>
 	
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <!--script>
